--- a/config/storage.yml
+++ b/config/storage.yml
@@ -6,6 +6,13 @@ local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
 
+amazon:
+ service: S3
+ region: ap-northeast-1
+ bucket: furima-34451
+ access_key_id: <%= ENV['AKIA5HW3S6ORIXYYCGMQ'] %>
+ secret_access_key:  <%= ENV['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'] %>
+
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
 #   service: S3
